--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>me.xann.purpurspy</groupId>
-    <artifactId>PurpurSpy</artifactId>
-    <version>0.2</version>
+    <groupId>me.xann</groupId>
+    <artifactId>purpurspy</artifactId>
+    <version>0.3</version>
     <packaging>jar</packaging>
 
-    <name>PurpurSpy</name>
+    <name>Purpurspy</name>
 
     <properties>
         <java.version>1.8</java.version>
@@ -66,8 +66,8 @@
     <dependencies>
         <dependency>
             <groupId>org.spigotmc</groupId>
-            <artifactId>spigot</artifactId>
-            <version>1.18.1-R0.1-SNAPSHOT</version>
+            <artifactId>spigot-api</artifactId>
+            <version>1.12-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
